# retirement-models

./: .envrc.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.api  README.md  config.yaml  docker-compose.yml  pyproject.toml
api/: __init__.py
api/blueprints/: assets.py  config_bp.py  configuration_bp.py  mc.py  runs.py  tax.py
configuration/: config.json
configuration/assets/: 401k_bonds.json  401k_stock.json  F5.json  README.md  SocSec.json  bonds.json  brokerage_bonds.json  brokerage_stock.json  job.json  primary_residence.json  rental1.json  rental_114.json  roth_ira_bonds.json  roth_ira_stock.json  stock.json
frontend/: Dockerfile.frontend  index.html  nginx-spa.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  configuration.ts  mc.ts  runs.ts
migrations/: 001_initial_schema.sql
models/: assets.py  claude.py  config.py  db.py  expenses.py  html_report.py  monte_carlo.py  reporting.py  scenarios.py  taxes.py  utils.py
models/templates/: _base.html  debt.html  distribution.html  index_mc.html  index_single.html  parameters.html  portfolio.html  tax.html  timeseries.html
nginx/: retirement.conf
tests/: test_api.py  test_assets.py  test_config.py  test_expenses.py  test_html_report.py  test_monte_carlo.py  test_reporting.py  test_scenarios.py  test_taxes.py  test_utils.py
tests/test_config/: test.json
wiki/: SCHEMA.md
wiki/raw/: fidelity_401k_v_roth.txt  trivent_social_security.txt
wiki/wiki/: index.md  log.md  overview.md
workbooks/: ensemble_analysis.ipynb
(+41 files in other folders)
