[project]
name = "2025-07-28-retirement-model"
version = "0.1.0"
description = ""
authors = [
    {name = "Scott Hendrickson",email = "scott@drskippy.net"}
]
readme = "README.md"
requires-python = "3.10.13"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "notebook (>=7.4.4,<8.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
